Make some basic HTML form, and a button with click handler

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <h1>HELLO WORLD!</h1>
+  <h1>Please type in a load of words</h1>
+  <input type="text" />
+  <button id="submit-button">Submit</button>
 </body>
 <script src="./script.js"></script>
 
