Get value of input box

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Please type in a load of words</h1>
-  <input type="text" />
+  <input id="input-box" type="text" />
   <button id="submit-button">Submit</button>
 </body>
 <script src="./script.js"></script>
