Join words and output

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <h1>Please type in a load of words</h1>
   <input id="input-box" type="text" />
   <button id="submit-button">Submit</button>
+  <button id="join-button">Join</button>
+  <div id="output"></div>
 </body>
 <script src="./script.js"></script>
 
