List of words output

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <input id="input-box" type="text" />
   <button id="submit-button">Submit</button>
   <button id="join-button">Join</button>
+  <ul id="input-words-list"></ul>
   <div id="output"></div>
 </body>
 <script src="./script.js"></script>
