--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
   <h1>Please type in a load of words</h1>
-  <input id="input-box" type="text" />
-  <button id="submit-button">Submit</button>
+  <form>
+    <input id="input-box" type="text" />
+    <button id="submit-button">Submit</button>
+  </form>
   <button id="join-button">Join</button>
   <ul id="input-words-list"></ul>
   <div id="output"></div>
